--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="styles/foundation.min.css" />
   <link rel="stylesheet" href="styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyIndex">
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="index.html" title="Page d'accueil">La Récréation</a></h1>
+          <h1><a href="index.html" title="Accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="images/phone.png" alt="logo téléphone" />
@@ -36,7 +36,7 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="index.html" title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="index.html" title="Page d'accueil">Accueil</a></li>
               <li><a class="lineUnderLink" href="pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
               <li><a class="lineUnderLink" href="pages/french/environment.html" title="Page environnement">Environnement</a></li>
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
-          <h2>L’heure de <i>La Récréation</i> a sonné !<br/><br/></h2>
+          <h2><em>L’heure de <i>La Récréation</i> a sonné !</em></h2>
           <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.
             <br/>
             <br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
@@ -70,7 +70,7 @@
             <img src="images/slider2.jpg" alt="Douceur de mangue">
             <img src="images/slider3.jpg" alt="macaron">
             <img src="images/slider4.jpg" alt="dessert">
-            
+
           </figure>
         </div>
       </div>
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="columns large-7 medium-12 small-12">
         <div class="videoHome">
-          <iframe width="520" height="315" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
+          <iframe class="videoYoutube" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -94,19 +94,19 @@
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
         <div class="contactHome">
-          <h2>Nous contacter</h2>
+          <h2><em>Nous contacter</em></h2>
           <h4>La Récréation</h4>
           <p id="contactAdressHome">Le Bourg
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
-          <h2>Horaires et jours d'ouverture</h2>
+          <h2><em>Horaires et jours d'ouverture</em></h2>
           <p>Du <i>lundi</i> au <i>dimanche</i> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
         </div>
       </div>
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -119,11 +119,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
