--- a/pages/english/contactAndPartner.html
+++ b/pages/english/contactAndPartner.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyContact">
@@ -52,26 +52,26 @@
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
         <div class="contactHome">
-          <h2>Contact us</h2>
+          <h2><em>Contact us</em></h2>
           <h4>La Récréation</h4>
           <p id="contactAdressHome">Le Bourg
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
-          <h2>Opening hours and days</h2>
+          <h2><em>Opening hours and days</em></h2>
           <p><i>Monday</i> to <i>Sunday</i> from 12h to 13h30 and from 19h30 to 21h00. Closed on Wednesday and Thursday except in July and August closed ONLY on Wednesday.</p>
         </div>
       </div>
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextContact">
-          <h2>OUR PARTNERS</h2>
+          <h2><em>OUR PARTNERS</em></h2>
           <p>Wanting to respect our region and highlight it, we work with local partners that allow quality products.
             <br/> Our summer vegetables or our flavored herbs come from the vegetable garden next door! A vegetable garden maintained by a former student of the school who gives heart to the work and therefore of the heart to our vegetables.
 
@@ -81,9 +81,9 @@
             <br/> La Récréation and its partners are waiting for you!</p>
           <p class="partners">List of partners
             <br/>
-            <br/><a href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="Website Les Bonnes Tables du Lot">Les Bonnes Tables Du Lot</a>
-            <br/><a href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="Website Quercy Gourmand TV">Quercy Gourmand TV</a>
-            <br/><a href="https://www.domaine-de-montsalvy.com/fr/" title="Website Domaine de Montsalvy ">Domaine de Montsalvy</a>
+            <br/><a target="blank" href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="Website Les Bonnes Tables du Lot">Les Bonnes Tables Du Lot</a>
+            <br/><a target="blank" href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="Website Quercy Gourmand TV">Quercy Gourmand TV</a>
+            <br/><a target="blank" href="https://www.domaine-de-montsalvy.com/fr/" title="Website Domaine de Montsalvy ">Domaine de Montsalvy</a>
           </p>
         </div>
       </div>
@@ -96,11 +96,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
