--- a/pages/english/environment.html
+++ b/pages/english/environment.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation, our environment</title>
-    <meta name="description" content="Discover the environment around La Récréation" />
-    <meta name="robots" content="index, follow" />
+  <meta name="description" content="Discover the environment around La Récréation" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyEnvironment">
@@ -52,15 +52,13 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextEnvironment">
-          <h2>The hour of Recreation rang!</h2>
+          <h2><em>OUR ENVIRONMENT</em></h2>
           <p>
-            An exotic restaurant, completely atypical in a former school between the wars invites you to discover its cuisine in the small village "Les Arques". Classroom, playground with courtyard have been transformed into a lush garden, where one lunch under the chestnut tree or under the mulberry trees. In the evening, the lighting emphasizes the ancient stone walls of this idyllic and historic place where artists come to exhibit. An inventive cuisine in the spirit of the site, rich in flavors and surprises from all over the world, guaranteeing fresh vegetables from the vegetable garden adjoining the restaurant.
-            <br/> The restaurant organizes regular cooking classes and develops a catering service at home.
+            The village of "LES ARQUES" is not a village that passed through it but a village where one stays all the day.
             <br/>
-            <br/> More than a good restaurant, it's a trip.
-
+            <br/> On the crest, since the 11th century, a village around a Priory has been established, and in the valley a series of mills or other buildings dedicated to artisanal activities, this is for history.
             <br/>
-            <br/> The restaurant is located in the town of Les Arques, a small village located in the south of France in the region "Midi Pyrenees" and more precisely in the department of Lot. This village is 26 km from Cahors and 26 km from Gourdon. To the south of the Périgord and to the south-east of the Dordogne, the village is classified for the Saint Laurent church, the frescoes of Saint Andrée, the old doyenneté and its tower. Les Arques is also known for its museum devoted to Ossip Zadkine, the workshops of Les Arques bringing each year a dozen artists from all over Europe, and of course the restaurant La Récréation. What an excitement in such a small village of 217 inhabitants.
+            <br/> Of all this there remains a very diverse architectural patrimony, from the Romanesque church to the mills to the pigeon lofts, ovens and other chapels with frescoes.
           </p>
         </div>
       </div>
@@ -75,7 +73,7 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextEnvironment">
-            <h2>THE ZADKINE MUSEUM</h2>
+            <h2><em>THE ZADKINE MUSEUM</em></h2>
             <p>Les Arques is a small village located in the lot.
               <br/>
               <br/>In the eleventh century a settlement was established on the ridge around a Priory and in the valley a series of buildings dedicated to craft activities.
@@ -90,7 +88,7 @@
       <div class="row">
         <div class="columns large-7 medium-7 small-12">
           <div class="thirdTextEnvironment">
-            <h2>THE VALLEY OF THE MASS AND THE MARK OF THE ARKS</h2>
+            <h2><em>THE VALLEY OF THE MASS AND THE MARK OF THE ARKS</em></h2>
             <p>
               The development of an area known as "Sensitive Natural Area" offers a visit to the wetlands of the village and the marking of various hiking trails.
               <br/> This area benefits from a management and development program carried out by the General Council of Lot, in partnership with local authorities and various stakeholders (owners, farmers, hunters, hikers, etc.).
@@ -117,11 +115,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
