--- a/pages/english/kitchenAndTakeaway.html
+++ b/pages/english/kitchenAndTakeaway.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyKitchen">
@@ -59,7 +59,7 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="firstTextKitchen">
-            <h2>OUR KITCHEN COURSES</h2>
+            <h2><em>OUR KITCHEN COURSES</em></h2>
             <p>Our chef offers cooking classes for a morning and a lunchtime lunch. Come and learn to cook exotic flavors or traditional dishes revisited by our chef Rémy Cougnac during these 3 hours cooking classes. Create with us our ravioli of coral lobster sauce, crispy Saint Jacques with the hair of angels, supremes of boneless quails or even a mango sweet heart flowing passion. You will attend a cocktail creation that will allow you to accompany your gourmet creations of the noon.
               <br/>
               <br/>Prices for cooking classes:
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
           <div class="middlePartText">
-            <h2>Courses</h2>
+            <h2><em>Courses</em></h2>
             <p>8:50 Arrival, coffee and briefing.
               <br/> 9:00 Start of workshops.
               <br/> 12:00 End of workshops.
@@ -109,7 +109,7 @@
       <div class="row">
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextKitchen">
-            <h2>Caterer</h2>
+            <h2><em>Caterer</em></h2>
             <p>Creator of new concepts, to make unique your events our caterer puts at your disposal his experience and his know-how in cooking and makes you discover unique creations that will surprise and enchant your guests.
               <br/> Our specialty in the catering business is undeniably the "verrine", ideal for cocktail dinners, buffets and other events of any kind.
               <br/> A logistics less binding for the customer, and the possibility of making a real journey of multiple savory and sweet flavors. Finally, a great facility to adapt to all scholarships.
@@ -134,11 +134,12 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <p>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
