--- a/pages/english/legalMentions.html
+++ b/pages/english/legalMentions.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="backgroundLegal">
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="textLegal">
-          <h2>LEGALS MENTIONS</h2>
+          <h2><em>LEGALS MENTIONS</em></h2>
           <p>In accordance with the provisions of Article 6 III-1 of Law No. 2004-575 of June 21, 2004 for confidence in the digital economy, we inform you that :</p>
           <p>
             This site is edited by:
@@ -93,7 +93,7 @@
             The user also has the right to object to the processing of his data for legitimate reasons as well as a right to object to the use of this data for the purposes of commercial prospection.
           </p>
           <p>
-            The user is informed that during his visits to the site, a cookie can be installed automatically on his software of navigation. The setting of the software of navigation makes it possible to inform of the presence of cookie and possibly to refuse it Described at the following address: <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
+            The user is informed that during his visits to the site, a cookie can be installed automatically on his software of navigation. The setting of the software of navigation makes it possible to inform of the presence of cookie and possibly to refuse it Described at the following address: <a target="blank" href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
           </p>
           <p>
             The general structure and the architecture of the site, as well as each of its elements, in particular the software, texts, moving images or not, are protected by the copyright. As such, any use and in particular any total or partial reproduction of the site or its elements and any transfer of its elements to another site without the written and express agreement of the rightful owners is prohibited and would constitute an infringement sanctioned by the Articles L. 335-2 et seq. Of the Intellectual Property Code.
@@ -116,11 +116,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
