--- a/pages/english/menuAndWine.html
+++ b/pages/english/menuAndWine.html
@@ -3,19 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, Map of menus and wines</title>
+  <meta name="description" content="La Récréation is proud to offer you 3 different menus as well as its wine list" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
-<body class="bodyIndex">
+<body class="bodyMenu">
 
   <header id="header">
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -28,18 +30,17 @@
         </div>
       </div>
     </div>
-    </div>
     <div class="menuSite">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -47,17 +48,84 @@
     </div>
   </header>
 
+  <section>
+    <div class="row">
+      <div class="columns large-12 medium-12 small-12">
+        <div class="menusAndVine">
+          <div class="menu1">
+            <img src="../../images/menu1.jpg" alt="menu1" />
+            <div class="textMenu1">
+              <p class="testus">MENU OF THE SMALL SCHOOL
+              </p>
+            </div>
+          </div>
+          <div class="menu2">
+            <img src="../../images/menu2.jpg" alt="menu2" />
+            <div class="textMenu2">
+              <p>SCHOOL MASTER'S MENU</p>
+            </div>
+          </div>
+          <div class="menu3">
+            <img src="../../images/menu3.jpg" alt="menu3" />
+            <div class="textMenu3">
+              <p>LA RECREATION MENU</p>
+            </div>
+          </div>
+          <div class="menu4">
+            <img src="../../images/vine.jpg" alt="vine" />
+            <div class="textMenu4">
+              <p>WINE MENU</p>
+            </div>
+          </div>
+        </div>
+        <div class="openMenu">
+          <div class="text1">
+            <h2><em>Menu of the small school :</em></h2>
+            <br/>
+            <br/> 37€
+            <br/>
+            <br/> Starter + Dish + Dessert
+
+            <br/>
+            <br/> A colorful menu that will make you discover the creations of the chef, or even the classics of La Récréation.
+          </div>
+          <div class="text2">
+            <h2><em>School's master menu :</em></h2>
+            <br/>
+            <br/> 46€
+            <br/>
+            <br/> tasting 2 Starters + 2 Dishes + 2 Desserts.
+            <br/>
+            <br/> To make your taste buds vibrate, there is nothing like tasting our different dishes. No jealous, there will be something for everyone. </div>
+          <div class="text3">
+            <h2><em>La Récréation menu :</em></h2>
+            <br/>
+            <br/> 26€
+            <br/>
+            <br/> Dish + Dessert
+            <br/>
+            <br/> Exclusively made with seasonal products and renewed every day. </div>
+          <div class="text4">
+            <h2><em>Wine menu :</em></h2>
+            <br/>
+            <br/> The restaurant will allow you to discover the flavors of the region. A varied menu, between Cahors wines, French classics or great wines in the restaurant's wine cellar, the Récréation should be a treat for wine lovers.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
