--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyEnvironment">
@@ -36,7 +36,7 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
@@ -52,14 +52,14 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextEnvironment">
-          <h2>L’heure de La Récréation a sonné !</h2>
+          <h2><em>NOTRE ENVIRONNEMENT</em></h2>
           <p>
-            Un restaurant dépaysant, complètement atypique dans une ancienne école de l’entre-deux guerres vous invite à découvrir sa cuisine dans le petit village « Les Arques ». Salle de classes, cour de récréation avec préau ont été transformés en jardin luxuriant, où l’on déjeune sous le marronnier ou sous les platanes mûriers. Le soir venu, l’éclairage met en relief les anciens murs de pierres de cette place idyllique et chargée d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des quatre coins du monde qui garantie des légumes frais issus du potager jouxtant le restaurant.
-            <br/> Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
+            Le village de « LES ARQUES » n’est pas un village que l’ont traverse mais un village où l’on reste toute la journée.<br/>
             <br/>
-            <br/> Plus qu’un bon restaurant, c’est un voyage.
-            <br/>
-            <br/> Le restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans la région « Midi Pyrénées » et plus précisément dans le département du Lot. Ce village se trouve à 26 km de Cahors et 26 km de Gourdon. Au sud du Périgord et au sud-est de la Dordogne, le village est classé pour l'église Saint Laurent, les Fresques de Saint Andrée, l'ancien doyenneté et sa tour. Les Arques est également connu pour son musée consacré à Ossip Zadkine, les ateliers des Arques faisant venir chaque année une douzaine d'artistes de toute l'Europe, et bien sûr le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 habitants.
+
+Sur la crête se sont installés depuis le XI éme siècle un village autour d’un Prieuré et dans la vallée une série de moulins ou autres  édifices dédiés à des activités artisanales, voilà pour l’histoire. 
+<br/><br/>
+De tout cela il reste tout un patrimoine architectural très divers, de  l’église romane aux moulins en passant par les pigeonniers, fours et  autres chapelles avec fresque. 
           </p>
         </div>
       </div>
@@ -74,7 +74,7 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextEnvironment">
-            <h2>LE MUSEE ZADKINE</h2>
+            <h2><em>LE MUSEE ZADKINE</em></h2>
             <p>Les Arques est un petit village situé dans le lot.
               <br/>
               <br/>Au XIème siècle s’est installé sur la crête un village autour d’un Prieuré et dans la vallée une série d’édifices dédiés à des activités artisanales.
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="columns large-7 medium-7 small-12">
           <div class="thirdTextEnvironment">
-            <h2>LA VALLÉE DE LA MASSE ET LE MARAIS DES ARQUES</h2>
+            <h2><em>LA VALLÉE DE LA MASSE ET LE MARAIS DES ARQUES</em></h2>
             <p>
               L’aménagement d’une zone dite “Espace Naturel Sensible” propose une visite des zones humides du village et le balisage de différents chemins de randonnée.
               <br/> Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs,…).
@@ -117,11 +117,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
