--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyKitchen">
@@ -59,7 +59,7 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="firstTextKitchen">
-            <h2>NOS COURS DE CUISINE</h2>
+            <h2><em>NOS COURS DE CUISINE</em></h2>
             <p>Notre chef vous propose des cours de cuisine le temps d’une matinée et d’un déjeuner le midi. Venez apprendre à cuisiner des saveurs exotiques ou encore des plats traditionnels revisités par notre chef Rémy Cougnac durant ces cours de cuisine de 3 heures. Créer avec nous nos raviolis de homard sauce corail, des croustillants de saint Jacques aux cheveux d’anges, des suprêmes de cailles désossés ou encore une douceur de mangue au coeur coulant passion. Vous assisterez à une création de cocktail qui vous permettra d’accompagner vos créations gastronomiques du midi. </p>
           </div>
         </div>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
           <div class="middlePartText">
-            <h2>Déroulement des cours</h2>
+            <h2><em>Déroulement des cours</em></h2>
             <p>8h50 Arrivée, café et briefing.
               <br/> 9h00 Début des ateliers.
               <br/> 12h00 Fin des ateliers.
@@ -102,7 +102,7 @@
       <div class="row">
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextKitchen">
-            <h2>LE TRAITEUR</h2>
+            <h2><em>LE TRAITEUR</em></h2>
             <p>Créateur de nouveaux concepts, pour rendre uniques vos événements notre traiteur met à votre disposition son expérience et son savoir-faire en cuisine et vous fait découvrir des créations uniques qui surprendront et enchanteront vos invités.
               <br/> Notre spécialité dans le domaine traiteur reste indéniablement la “verrine", idéale pour les cocktails dînatoires, les buffets et autres événements en tout genre.
               <br/> Une logistique moins contraignante pour le client, et la possibilité de faire un véritable voyage de multiples saveurs salées et sucrées. Enfin, une grande facilité pour s'adapter à toutes les bourses.
@@ -128,11 +128,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
