--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="backgroundLegal">
@@ -36,7 +36,7 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../index.html" title="Page d'accueil">Accueil</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="textLegal">
-          <h2>MENTIONS LEGALES</h2>
+          <h2><em>MENTIONS LEGALES</em></h2>
           <p>Conformément aux dispositions de l’article 6 III-1 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous vous informons que :</p>
           <p>
             Le présent site est édité par :
@@ -92,7 +92,7 @@
             L’utilisateur dispose également d’un droit d’opposition au traitement de ses données pour des motifs légitimes ainsi qu’un droit d’opposition à ce que ces données soient utilisées à des fins de prospection commerciale.
           </p>
           <p>
-            L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
+            L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante <a target="blank" href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
           </p>
           <p>
             La structure générale et l’architecture du site, ainsi que chacun de ses éléments, notamment les logiciels, textes, images animées ou non, sont protégés par le droit d’auteur. A ce titre, toute utilisation et notamment toute reproduction totale ou partielle du site ou de ses éléments, ainsi que tout transfert de ses éléments vers un autre site sans l’accord écrit et exprès des ayants droit est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 et suivants du Code de la propriété intellectuelle.
@@ -110,17 +110,16 @@
   </section>
 
   <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
