--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 </head>
 
 <body class="bodyIndex">
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
-          <h2>The hour of <i>La Récréation</i> rang!<br/><br/></h2>
+          <h2><em>The hour of <i>La Récréation</i> rang!</em></h2>
           <p>An exotic restaurant, completely atypical in an old school between the two wars. Classroom, playground with courtyard transformed into a lush garden, where one lunch under the chestnut tree or the mulberry trees.
             <br/>
             <br/>In the evening, lighting illuminates the ancient stone walls of this idyllic and historic place where artists come to exhibit. An inventive cuisine in the spirit of the site, rich in flavors and surprises from all over the world guaranteeing fresh vegetables from the vegetable garden adjacent to the restaurant. The restaurant organizes regular cooking classes and develops a catering service at home.
@@ -70,7 +70,7 @@
             <img src="../../images/slider1.jpg" alt="fruits creation">
             <img src="../../images/slider2.jpg" alt="Douceur de mangue">
             <img src="../../images/slider3.jpg" alt="macaron">
-             <img src="../../images/slider4.jpg" alt="dessert">
+            <img src="../../images/slider4.jpg" alt="dessert">
           </figure>
         </div>
       </div>
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="columns large-7 medium-12 small-12">
         <div class="videoHome">
-          <iframe width="520" height="315" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
+          <iframe class="videoYoutube" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -94,19 +94,19 @@
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
         <div class="contactHome">
-          <h2>Contact us</h2>
+          <h2><em>Contact us</em></h2>
           <h4>La Récréation</h4>
           <p id="contactAdressHome">Le Bourg
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
-          <h2>Opening hours and days</h2>
+          <h2><em>Opening hours and days</em></h2>
           <p><i>Monday</i> to <i>Sunday</i> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
         </div>
       </div>
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -119,11 +119,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a target="blank" href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a target="blank" href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a target="blank" href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
